
// ============================
// Categories (Aggregate Root)
// ============================
Table categories {
  id int [pk, increment]
  name varchar(100) [not null]
  type enum('income', 'expense', 'debt') [not null]
  parent_id int [ref: > categories.id, default: null]

  created_at timestamp [default: `current_timestamp`] // otomatis
  updated_at timestamp [default: `current_timestamp`] // otomatis update saat edit
}

// ============================
// Expense Budget (Aggregate Root)
// ============================
Table budget {
  id int [pk, increment] // primary key
  name varchar(50) [not null]
  family_id int [ref: > families.id, not null] // untuk budget keluarga
  category_id int [ref: > categories.id, not null] // link ke kategori
  budget_month date [not null] // bulan untuk budget, simpan sebagai first day of month
  total_amount decimal(12,2) [not null] // jumlah budget

  created_at timestamp [default: `current_timestamp`] // otomatis
  updated_at timestamp [default: `current_timestamp`] // otomatis update saat edit
}

Table expense_budget_allocation {
  id int [pk, increment]
  budget_id int [ref: > budget.id, not null] // link ke budget
  category_id int [ref: > categories.id, not null] // link ke kategori
  allocated_amount decimal(12,2) [not null] // jumlah alokasi untuk kategori ini

  created_at timestamp [default: `current_timestamp`] // otomatis
  updated_at timestamp [default: `current_timestamp`] // otomatis update saat edit
}


// ============================
// Cash Transaction (Aggregate Root)
// ============================
Table cash_transaction {
  id int [pk, increment]
  type varchar (10) // INCOME | EXPENSE | TRANSFER | SAVING
  allocation_id int [ref :> expense_budget_allocation.id, null]

  transaction_date date [not null] // tanggal transaksi
  amount decimal(12,2) [not null] // jumlah uang
  currency char(3) [default: 'IDR']
  description text // catatan / keterangan

  user_creator_id int [ref: > users.id, not null]
  created_at timestamp [default: `current_timestamp`]
  updated_at timestamp [default: `current_timestamp`]
}

// ============================
// Investments (Aggregate Root)
// ============================
Table investments {
  id int [pk, increment] // primary key
  user_id int [ref: > users.id, not null] // user / anggota keluarga
  goal_id int [ref: > financial_goals.id, null]
  name varchar(100) [not null] // nama investasi / simbol
  transaction_type enum('buy','sell','dividend') [not null] // jenis transaksi
  instrument_id varchar [ref:> instrument.id, not null]

  quantity decimal(12,2) // jumlah unit (saham / reksadana / gram emas)
  price_per_unit decimal(12,2) // harga per unit
  transaction_date date [not null] // tanggal transaksi
  description text // optional catatan

  created_at timestamp [default: `current_timestamp`]
  updated_at timestamp [default: `current_timestamp`]
}

// ============================
// Users (Aggregate Root)
// ============================

Table users {
  id int [pk, increment]
  family_id int [ref: > families.id, not null]
  name varchar(100) [not null]
  email varchar(150) [unique, not null]
  password varchar(255) [not null]

  created_at timestamp [default: `current_timestamp`]
  updated_at timestamp [default: `current_timestamp`]
}


// ============================
// Families (Aggregate Root)
// ============================
Table families {
  id int [pk, increment]
  name varchar(100) [not null] // contoh: "Keluarga Mario"

  created_at timestamp [default: `current_timestamp`]
  updated_at timestamp [default: `current_timestamp`]
}


// ============================
// Account (Aggregate Root)
// ============================

Table accounts {
  id int [pk, increment] // unique id untuk account
  user_holder_id int [ref: > users.id] // pemilik account

  name varchar(100) [not null] // nama account
  type enum('cash','saving','investment','credit_card') [not null]

  currency char(3) [default: 'IDR']
  account_number varchar (50) [null]
  description text

  credit_limit decimal(12,2) [null]
  billing_cycle_start int [null]
  billing_cycle_end int [null]

  created_at timestamp [default: `current_timestamp`]
  updated_at timestamp [default: `current_timestamp`]
}

// ============================
// Assets (Aggregate Root)
// ============================

//Menyimpan Asset Fisik
Table assets {
  id int [pk, increment]
  user_holder_id int [ref: > users.id]
  name varchar(100) [not null] // nama asset
  asset_type enum('property','vehicle','electronics','other') [not null]
  quantity decimal(12,2) [default: 1] // jumlah unit
  unit varchar(20) [not null] // satuan: 'kg', 'gram', unit, mm^2 etc

  value_direction varchar (10) // APPRECIATE, DEPRECIATE, STABLE
  anual_arte decial (12,2)

  estimate_value decial
  description text
  acquired_date date

  created_at timestamp [default: `current_timestamp`]
  updated_at timestamp [default: `current_timestamp`]
}

// ============================
// Financial Goals (Aggregate Root)
// ============================

Table financial_goals {
  id uuid [pk]
  family_id int [not null, ref: > families.id]

  name varchar(100) [not null]
  target_amount decimal(14,2) [not null]
  target_date date [not null]
  status enum('not_started', 'in_progress', 'accomplished') [default: 'not_started']
  
  description text
  
  created_at timestamp [default: `current_timestamp`]
  updated_at timestamp [default: `current_timestamp`]
}

Table financial_goal_strategies{
  id uuid [pk]
  goal_id uiid [ref:> financial_goals.id, not null]

  start_date date [not null]
  end_date date [null]

  frequency enum ('monthly', 'weekly') [not null]

  created_at timestamp [default: `current_timestamp`]
  updated_at timestamp [default: `current_timestamp`]

}

Table financial_goal_allocations{
 id uuid [pk]
 strategy_id uiid [not null, ref:> financial_goal_strategies.id]

 asset_type enum('stock', 'gold', 'bond') [not null]
 allocation_amount decimal(14,2) [not null] 
}




// ============================
// Market Price (Aggregate Root)
// ============================

Table instrument {
  id int [pk, increment]
  type enum('stock','bond','commodity','currency') [not null]
  name varchar(20) [not null, unique] //BBCA, GOLD, BBRI
  current_price decimal(20,2) [not null]
  currency_price char(3) [default: 'IDR']

  created_at timestamp [default: `current_timestamp`]
  updated_at timestamp [default: `current_timestamp`]
}


// ============================
// LOAN (Aggregate Root)
// ============================
Table loan {
  id int [pk, increment]
  account_id int [ref:> accounts.id, not null]
  user_holder_id int [ref:> users.id, not null]

  name varchar (100) [not null]
  principal_amount decimal (20, 2) [not null]
  monthly_amount decimal(20,2) [not null] 


  type enum ('bank','credit_card')
  payment_scheme enum ('FULL','INSTALLMENT')
  installment_tenor_months int // contoh: 12 untuk 1 tahun, 24 untuk 2 tahun, dll

  start_date date [not null]
  end_date date [not null]
  status varchar (50) // ACTIVE / PAID_OFF

  created_at timestamp [default: `current_timestamp`]
  updated_at timestamp [default: `current_timestamp`]
}

Table loan_insatllment {
  id int [pk]
  loan_id int [ref: > loan.id]

  installment_no int
  due_month varchar(10)
  total_amount decimal(20,2)
  is_paid bool
  paid_amount decimal (20,2)
  paid_transaction_id int [ref: > cash_transaction.id, null]
  paid_date date [null]

  created_at timestamp [default: `current_timestamp`]
  updated_at timestamp [default: `current_timestamp`]
}










